# SquareQ

./: .gitignore  README.md  pyproject.toml
runner/: bench.py
scripts/: test_flux_bp8_lora_vram.py  test_flux_bp8_pipeline.py  test_sdxl_int8_e2e.py  test_sdxl_int8_inference.py  test_sdxl_int8_training.py
src/squareq/: __init__.py  bridge.py  builder.py  loader.py  manifest.py  modules.py  scaffold.py
src/squareq/kernels/: __init__.py  slab_matmul.py  slab_matmul_triton.py
src/squareq/quant/: __init__.py  loader.py  loader_lora.py  modules.py  modules_lora.py  runtime_config.py  slab_io.py
src/squareq/slab/: schema.py
src/squareq/tools/: bench_bp8_vs_bf16.py  squareq_build_slab.py
tests/: test_loader_never_materializes_fp_weights.py  test_quant_lora_gradients.py  test_quant_module_contract.py  test_quant_slab_io.py  test_squareq_gate0_format.py  test_squareq_gate10_error_handling.py  test_squareq_gate14_dtype_protection.py  test_squareq_gate1_scaffold.py  test_squareq_gate2_residency.py  test_squareq_gate3_no_materialization.py  test_squareq_gate4_lora.py  test_squareq_gate5_accuracy.py  test_squareq_vram_from_logs.py
