[project]
name = "squareq"
version = "0.2.0"
description = "INT8 quantized linear layers with V2 safetensors slab format"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AI-Toolkit Contributors" }]
dependencies = [
    "torch>=2.1",
    "safetensors",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
